--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "classnames": "^2.3.2",
     "highlight.js": "^11.9.0",
     "next": "latest",
+    "next-auth": "^4.24.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-highlight": "^0.15.0"
